# alea

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: README.md  benchmark_rand.rs
src/: lib.rs
