[package]
name = "alea"
version = "0.2.2"
authors = ["Jeff Shen <jshen2014@hotmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

readme = "README.md"
description = "A crate for randomness."
repository = "https://github.com/al-jshen/alea"

categories = ["algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"
fastrand = "1"
rand = "0.8"
rand_pcg = "0.3"
rand_xorshift = "0.3"

[[bench]]
name = "benchmark_rand"
harness = false
